switched to krang framework

--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,14 @@
   
   # Register your bot and get a key: https://www.cleverbot.com/api/
   :cleverbot_api_key: <your cleverbot api key>
+  
+  # List of apps for this bot to ignore (blacklist).  It is advisable to ignore
+  # other instances of freakazoid and all known engagement bots.
+  :except_apps: freakazoid meep_bot
+  
+  # List of apps for this bot to pay attention to (whitelist).  Useful you'd
+  # like to focus only on these apps/sites.
+  # :only_apps: steemit esteem chainbb streemian busy 
 
 :chain_options:
   :chain: steem
