--- a/config.yml
+++ b/config.yml
@@ -21,6 +21,12 @@
   # List of apps for this bot to pay attention to (whitelist).  Useful if you'd
   # like to focus only on these apps/sites.
   # :only_apps: steemit esteem chainbb streemian busy 
+  
+  # When non-zero, vote for the author while replying.
+  :vote_weight: 0.00 %
+    
+  # When non-zero, vote for self while replying.
+  :self_vote_weight: 0.00 %
 
 :chain_options:
   :chain: steem
