--- a/config.yml
+++ b/config.yml
@@ -26,6 +26,9 @@
   # value is true.
   :follow_back: false
   
+  # When non-zero, vote for the author only occure after this many minutes.
+  unique_author: 1440
+  
   # When non-zero, vote for the author while replying (if the author follows 
   # the bot).
   :vote_weight: 0.00 %
