--- a/config.yml
+++ b/config.yml
@@ -47,7 +47,7 @@
 # 
 # See: https://github.com/inertia186/meeseeker
 # :meeseeker_options:
-#   :url: redis://banjo.local:6379/0
+#   :url: redis://127.0.0.1:6379/0
 
 :chain_options:
   :chain: hive
